# reducethemtokens

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
rtt/: __init__.py  audit.py  bench.py  cache.py  cli.py  extractor.py  formatter.py  installer.py  tokenizer.py
rtt/languages/: __init__.py  c_lang.py  cpp_lang.py  go_lang.py  java_lang.py  javascript_lang.py  lua_lang.py  python_lang.py  registry.py  ruby_lang.py  rust_lang.py  swift_lang.py  typescript_lang.py
tests/: test_accuracy.py  test_accuracy_controlled.py  test_agent_workflow.py  test_audit.py  test_bench.py  test_extractor.py
tests/fixtures/: sample.lua  sample.py  sample_decorated.py  sample_go.go  sample_js.js  sample_rs.rs  sample_try_except.py
